k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n-rainhas
  labels:
    app.kubernetes.io/name: n-rainhas-spa
    app.kubernetes.io/part-of: n-rainhas
