k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n-rainhas-web
  namespace: n-rainhas
  labels:
    app.kubernetes.io/name: n-rainhas-spa
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: n-rainhas-spa
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
